--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,29 +1,26 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&family=Roboto:wght@100;300;400;500;700;900&display=swap');
 body {
     color: white;
+    font-family: 'Roboto', sans-serif;
 }
 
 .section-b {
-    background: black;
+    background-color: rgba(0, 0, 0, .85);
+    -webkit-backdrop-filter: saturate(180%) blur(20px);
+    backdrop-filter: saturate(180%) blur(20px);
+    color: white;
 }
 
 .main {
     margin-top: 30px;
     border-radius: 10px;
     color: black;
-    margin-bottom: 30px;
 }
 
 .main img {
     border-radius: 10px;
-    margin-top: 10px;
-}
-
-.card {
-    box-shadow: 0 0 10px black;
-    border-radius: 10px;
-    width: 18rem;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    width: 100%;
 }
 
 .sidebar {
@@ -31,7 +28,6 @@ body {
     border-radius: 10px;
     width: 100%;
     margin-bottom: 30px;
-    color: white;
 }
 
 .sidebar ul {
@@ -48,28 +44,12 @@ footer a:hover {
     color: gray;
 }
 
-.content {
-    box-shadow: 0 0 10px black;
-    border-radius: 10px;
-    padding: 20px;
-    text-indent: 20px;
-}
-
-.item-block {
-    box-shadow: 0 0 10px black;
-    border-radius: 10px;
+.content a {
+    color: black;
+    text-decoration: none;
 }
 
 .nav-link {
-    color: white;
-}
-
-a {
-    text-decoration: none;
-    color: white;
-}
-
-a:hover {
     color: white;
 }
 
@@ -103,27 +83,26 @@ a:hover {
     width: 100%;
 }
 
-video#bgvid {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    min-width: 100%;
-    min-height: 100%;
-    width: auto;
-    height: auto;
-    z-index: -100;
-    -ms-transform: translateX(-50%) translateY(-50%);
-    -moz-transform: translateX(-50%) translateY(-50%);
-    -webkit-transform: translateX(-50%) translateY(-50%);
-    transform: translateX(-50%) translateY(-50%);
-    background-size: cover;
+.card {
+    border-radius: 10px;
+}
+
+.card a {
+    text-decoration: none;
+    text-align: center;
+}
+
+.card:hover {
+    border: 1px solid gray;
+    box-shadow: 0 0 5px gray;
 }
 
 footer {
     padding-top: 30px;
-    color: white;
 }
 
 footer a {
     padding-top: 30px;
+    color: white;
+    text-decoration: none;
 }
