--- a/public/css/main.css
+++ b/public/css/main.css
@@ -16,7 +16,7 @@ body {
     margin-top: 30px;
     border-radius: 10px;
     color: black;
-    min-height: 100%;
+    min-height: 600px;
 }
 
 .email-box {
