--- a/public/css/main.css
+++ b/public/css/main.css
@@ -45,6 +45,10 @@ body {
     border-radius: 10px;
 }
 
+footer a:hover {
+    color: gray;
+}
+
 .content a {
     color: black;
     text-decoration: none;
