--- a/public/css/main.css
+++ b/public/css/main.css
@@ -26,7 +26,7 @@ body {
 }
 
 .main img {
-    border-radius: 10px;
+    border-radius: 15px;
     width: 100%;
 }
 
@@ -118,6 +118,6 @@ footer a {
 }
 
 .service_add {
-    box-shadow: 0 0 10px gray;
+    box-shadow: 0px 0px 16px 3px rgba(34, 60, 80, 0.2);
     border-radius: 15px;
 }
