--- a/public/css/main.css
+++ b/public/css/main.css
@@ -121,3 +121,8 @@ footer a {
     box-shadow: 0px 0px 16px 3px rgba(34, 60, 80, 0.2);
     border-radius: 15px;
 }
+
+.service_block {
+    box-shadow: 0px 0px 16px 3px rgba(34, 60, 80, 0.2);
+    border-radius: 15px;
+}
