--- a/public/css/main.css
+++ b/public/css/main.css
@@ -126,3 +126,19 @@ footer a {
     box-shadow: 0px 0px 16px 3px rgba(34, 60, 80, 0.2);
     border-radius: 15px;
 }
+
+.feeedback_mail table {
+    box-shadow: rgba(0, 0, 0, .85);
+    border-radius: 15px;
+}
+
+.feeedback_mail td {
+    padding: 10px;
+}
+
+.message {
+    box-shadow: rgba(0, 0, 0, .85);
+    border-radius: 15px;
+    padding: 15px;
+    font-style: italic;
+}
